@@ -14,6 +14,7 @@ note to the bug-report mailing list (as seen at end of e.g., cp --help).
 
 ???                                 kytek@cybercomm.net
 A Costa                             agcosta@gis.net
+Aaron Davies                        aaron.davies@gmail.com
 Aaron Hawley                        ashawley@uvm.edu
 Achim Blumensath                    blume@corona.oche.de
 Adam Jimerson                       vendion@charter.net
